# buzzay

./: .buildinfo  .gitignore  Makefile  README.md  RESOURCES.md  buzzay-plugin.h  compile_commands.json  genindex.html  index.html  log.txt  meson.build  objects.inv  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/: index.md.txt
_sources/api/: extra-info.md.txt  getting-started.md.txt  index.md.txt  plugin-api.md.txt
_sources/user/: configuration.md.txt  env-vars.md.txt  getting-started.md.txt
api/: advanced.html  extra-info.html  getting-started.html  index.html  plugin-api.html  server.html
docs/: Doxyfile  requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/: custom.css  force-reload.js
docs/source/api/: advanced.md  getting-started.md  index.md  plugin-api.md  server.md
docs/source/plugins/: index.md  kbinder.md
docs/source/user/: configuration.md  getting-started.md
include/: buzzay-plugin.h  compositor.h  cursor.h  gamma.h  handle-plugin.h  idle.h  input.h  ipc.h  layershell.h  output.h  plugin.h  server.h  shared.h  tiling.h  workspace.h  xdg.h
plugins/: index.html  kbinder.html
src/: cursor.c  gamma.c  idle.c  input.c  ipc.c  layershell.c  main.c  output.c  plugin.c  tiling.c  workspace.c  xdg.c
subprojects/: .gitignore  scenefx.wrap
user/: configuration.html  env-vars.html  getting-started.html
